fix(accordion): Adds text-align left to toggler

--- a/components/accordion/src/_mixin.scss
+++ b/components/accordion/src/_mixin.scss
@@ -46,6 +46,7 @@
   justify-content: space-between !important;
   line-height: var(--govnl-accordion-button-line-height);
   position: relative;
+  text-align: left;
   width: 100%;
 }
 
